syntax = "proto3";

package common;

enum RequestStatus {
  Success = 0;
  Failed = 1;
}

message ErrorResponse {
    int32 code = 1;
    string message = 2;
}