syntax = "proto3";

package vault_entries;

import "google/protobuf/timestamp.proto";

service VaultEntriesManager {
  rpc CreateNewVault(NewVaultEntryRequest) returns (GetVaultEntryResponse);
  rpc GetVaultEntry(GetVaultEntryRequest) returns (GetVaultEntryResponse);
  rpc UpdateVaultEntry(UpdateVaultEntryRequest) returns (GetVaultEntryResponse);
  rpc DeleteVaultEntry(UpdateVaultEntryRequest)
      returns (DeleteVaultEntryResponse);
}

message NewVaultEntryRequest {
  string title = 1;
  string description = 2;
  string vault_id = 3;
  map<string, string> more_fields = 4;
}

message GetVaultEntryResponse {
  string title = 1;
  string description = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  string vault_id = 5;
  map<string, string> more_fields = 6;
  string vault_entry_id = 8;
}

message GetVaultEntryRequest {
  string vault_id = 1;
  string vault_entry_id = 2;
}

message UpdateVaultEntryRequest {
  string vault_id = 1;
  optional string title = 2;
  optional string description = 3;
  string vault_entry_id = 4;
}

message DeleteVaultEntryResponse {
  string vault_id = 1;
  string vault_entry_id = 2;
  string status = 4;
}


