syntax = "proto3";

package vault;

import "google/protobuf/timestamp.proto";

service VaultManager {
  rpc CreateNewVault(NewVaultRequest) returns (NewVaultResponse);
  rpc GetVault(GetVaultRequest) returns (GetVaultResponse);
  rpc UpdateVault(UpdateVaultRequest) returns (GetVaultResponse);
  rpc DeleteVault(DeleteVaultRequest) returns (DeleteVaultResponse);
  rpc ListVaults(ListVaultsRequest) returns (ListVaultsResponse);
}

message VaultEntries {
  string title = 1;
  string description = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
  string vault_id = 5;
  map<string, string> more_fields = 6;
}

message NewVaultRequest {
  string name = 1;
  string description = 2;
  string user_id = 3;
}

message NewVaultResponse {
  string vault_id = 1;
  string user_id = 2;
  string name = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message GetVaultRequest { string vault_id = 1; }

message GetVaultResponse {
  string vault_id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  string user_id = 6;
  repeated VaultEntries entries = 7;
}

message UpdateVaultRequest {
  string vault_id = 1;
  optional string name = 2;
  optional string description = 3;
}

message UpdateVaultResponse {
  string vault_id = 1;
  string status = 2;
}

message DeleteVaultRequest { string vault_id = 1; }

message DeleteVaultResponse {
  string vault_id = 1;
  string message = 2;
}

message ListVaultsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListVaultsResponse {
  repeated GetVaultResponse vaults = 1;
  int32 total_count = 2;
}
